--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,2 @@
-
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb+srv://user:user@cluster0.nms5nf0.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=product-inventory
-
-spring.data.mongodb.uri=mongodb://localhost:27017/product-inventory
